set max memory, java 9 module config and java class path